--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '^1.22.1' # The Go version to download (if necessary) and use.
-      - run: go install golang.org/x/tools/cmd/goimports@latest
+      - run: |
+          go install golang.org/x/tools/cmd/goimports@latest
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.57.2
       - uses: actions/setup-python@v3
       - uses: pre-commit/action@v3.0.0
