--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,14 +2,24 @@ version: '3.9'
 services:
   golang-api-template:
     container_name: golang-api-template
-    build: .
+    build:
+      context: ../
+      dockerfile: ./docker/Dockerfile
     ports:
-      - '8080:8080' # change port here
+      - '8085:8080' # change port here
     volumes:
       - ./logs/:/app/logs/
-      - ./cmd/api/app.env:/app/app.env
+      - ./app.env:/app/app.env
     healthcheck:
       test: ["CMD", "curl", "-f", "http://127.0.0.1:8080/health-check"]
       interval: 5s
       timeout: 3s
       retries: 3
+    networks:
+      - golang-api-template-network
+
+
+networks:
+  golang-api-template-network:
+    external: true
+
